Source/WebCore: [CSS Background Blending] Specifying background-image and background-color with opaque image doesn't trigger blending. The fix consists of adding a check whether blend mode is set in hasOpaqueImage.

https://bugs.webkit.org/show_bug.cgi?id=119434

Patch by Mihai Tica <mitica@adobe.com> on 2013-08-05
Reviewed by Dirk Schulze.

Test: css3/compositing/background-blend-mode-separate-layer-declaration.html

* rendering/style/FillLayer.cpp:
(WebCore::FillLayer::hasOpaqueImage):

LayoutTests: [CSS Background Blending] Specifying background-image and background-color with opaque
image doesn't trigger blending. Adding ref test to validate the fix.

https://bugs.webkit.org/show_bug.cgi?id=119434i

Patch by Mihai Tica <mitica@adobe.com> on 2013-08-05
Reviewed by Dirk Schulze.

* css3/compositing/background-blend-mode-separate-layer-declaration-expected.html: Added.
* css3/compositing/background-blend-mode-separate-layer-declaration.html: Added.
* css3/compositing/resources/gray_square.svg: Added.

Canonical link: https://commits.webkit.org/137433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153702 268f45cc-cd09-0410-ab3c-d52691b4dbfc