Source/WebCore/rendering/style/FillLayer.cpp
@@ -351,6 +351,9 @@ bool FillLayer::hasOpaqueImage(const RenderObject* renderer) const
     if (m_composite == CompositeClear || m_composite == CompositeCopy)
         return true;
 
+    if (m_blendMode != BlendModeNormal)
+        return false;
+
     if (m_composite == CompositeSourceOver)
         return m_image->knownToBeOpaque(renderer);
 
